# economic-pulse-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: conftest.py
backend/api/: urls.py
backend/api/tests/: test_health.py
backend/api/views/: health.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  development.py  test.py
backend/core/: admin.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  raw.py
backend/extractors/: base.py  fred.py
backend/loaders/: warehouse_loader.py
docker/: docker-compose.yml
